# sdk

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.github/workflows/: ubuntu_clang.yaml  ubuntu_gcc.yaml  windows_server.yaml
gremsnoort/sdk/: CMakeLists.txt
gremsnoort/sdk/benchmark/: CMakeLists.txt
gremsnoort/sdk/benchmark/time/: CMakeLists.txt  thread_timer.h  timers.cc  timers.h
gremsnoort/sdk/examples/: CMakeLists.txt  source.cpp  unit.cpp
gremsnoort/sdk/forward/: factory.hpp  inplaced.hpp  program_options.hpp  source.hpp  time_utils.hpp  unit.hpp
gremsnoort/sdk/tests/: CMakeLists.txt  inplaced.cpp
gremsnoort/sdk/tests/data/: node.hpp
sdk/benchmark/time/: thread_timer.h  timers.cc  timers.h
sdk/forward/: inplaced.hpp  program_options.hpp
